[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/gato-pija-test-2.png" type="Texture" id=2]
[ext_resource path="res://scenes/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scenes/Manabar.tscn" type="PackedScene" id=4]
[ext_resource path="res://sound_effects/dash_activated.wav" type="AudioStream" id=5]
[ext_resource path="res://sound_effects/not_enough_mana.wav" type="AudioStream" id=6]
[ext_resource path="res://sound_effects/double_jump_sound_effect.mp3" type="AudioStream" id=7]
[ext_resource path="res://scenes/DoubleJumpParticles.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/PlayerTrail.gd" type="Script" id=9]
[ext_resource path="res://scenes/RayCastLeftWall2D.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.0125, 0.0363636 ), 0.0, 0.0, 0, 0, Vector2( 0.979167, 0.936364 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.435407, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.9375, 0, 1 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DoubleJumpParticles" parent="." instance=ExtResource( 8 )]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -25 )
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="DashActiveTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashSkillActivatedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Manabar" parent="." instance=ExtResource( 4 )]

[node name="NotEnoughManaPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DoubleJumpSkillActivatedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="DashTrail" type="Line2D" parent="."]
z_index = -1
width = 20.0
width_curve = SubResource( 2 )
gradient = SubResource( 3 )
script = ExtResource( 9 )

[node name="RayCastLeftWall2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )
script = ExtResource( 10 )

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="collided" from="RayCastLeftWall2D" to="." method="_on_RayCastLeftWall2D_collided"]
[connection signal="no_collision" from="RayCastLeftWall2D" to="." method="_on_RayCastLeftWall2D_no_collision"]
